# notecli

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  command.rs  engine.rs  main.rs  midi.rs  midi_out.rs  model.rs  sample.rs  transport.rs  voice.rs
src/dsp/: drums.rs  env.rs  filter.rs  mod.rs  osc.rs  reverb.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/views/: browser.rs  channels.rs  mixer.rs  mod.rs  piano.rs  playlist.rs
