[package]
name = "notecli"
version = "0.1.0"
edition = "2021"
description = "noteCLI. fl studio in your terminal. step sequencer, piano roll, mixer, sample loading, all in ratatui."
authors = ["silaswu4"]
license = "MIT"

[[bin]]
name = "notecli"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
ringbuf = "0.4"
arc-swap = "1"
hound = "3"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
ureq = { version = "2", features = ["json", "tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
